changed to custom bulma colors

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,1 +1,11 @@
+// Colors
+$primary: #235e72;
+$info: #00a4d9;
+$success: #5eadb2;
+$warning: #fce473;
+$danger: #ed6c63;
+
+// Border radius
+$radius: 0;
+
 @import "bulma";
