--- a/app/templates/challenges.hbs
+++ b/app/templates/challenges.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+<div class="jumbo">
+  <div class="right tomster"></div>
+  <h2>Welcome!</h2>
+  <p>We hope you find exactly what you're looking for here.</p>
+  {{#link-to "about" class="button is-primary"}}
+    About Us
+  {{/link-to}}
+</div>
