--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,26 @@
-{{outlet}}
+<!-- {{nav-bar}} -->
+<div class="container is-fullhd">
+  <div class="body">
+    <img src="/images/logo_reverse.png">
+  <section class="hero is-primary">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        Primary title
+      </h1>
+      <h2 class="subtitle">
+        Primary subtitle
+      </h2>
+    </div>
+  </div>
+</section>
+  <section class="section">
+    <div class="container">
+      <h1 class="title">Testify</h1>
+      <h2 class="subtitle">
+        A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading
+      </h2>
+    </div>
+  </section>
+</div>
+</div>
